# opengl-dev-evn

./: CMakeLists.txt  OpenGLTest.cpp  OpenGLTest.h  README.md
include/glad/: glad.h
src/: glad.c
